# Sterowniki-dla-systemu-Linux

./: .gitattributes  compile_commands.json
lab2/intel-simics-package-manager-1.14.0/--create-project/simics-7.38.0/src/extensions/sample-linux-tracker/: CMakeLists.txt  sample-linux-mapper-admin-iface.c  sample-linux-mapper-query-iface.h  sample-linux-tracker-control-iface.c  sample-linux-tracker-params.c
lab2/intel-simics-package-manager-1.14.0/--create-project/simics-qsp-x86-7.27.0/src/components/qsp-x86-bp/: CMakeLists.txt
lab2/intel-simics-package-manager-1.14.0/--create-project/simics-training-7.0.0-pre.11/src/components/led-system-panel-comp/: CMakeLists.txt
lab2/simics/simics-7.38.0/src/extensions/graphcon/: CMakeLists.txt  gfx-console.c  recorder.h  rect.h  save.h  winsome-frontend.h
lab2/simics/simics-7.38.0/src/extensions/notifier-example/: CMakeLists.txt  Makefile  sock.c
lab2/simics/simics-7.38.0/src/extensions/notifier-example/test/: s-basic.py
lab2/simics/simics-7.38.0/src/extensions/sample-risc/: CMakeLists.txt  Makefile  sample-risc-cycle.h  sample-risc-exec.c  sample-risc-exec.h  sample-risc-frequency.c  sample-risc-frequency.h  sample-risc.h
lab2/simics/simics-7.38.0/src/extensions/sample-risc/test/: CMakeLists.txt  s-add.py  s-nop.py
lab2/simics/simics-7.38.0/src/extensions/textcon/: CMakeLists.txt  telnet.c  vt100.c  winsome-frontend.c  winsome-frontend.h
lab2/simics/simics-7.38.0/vmxmon/util/: CMakeLists.txt
lab2/simics/simics-training-7.0.0-pre.11/: CMakeLists.txt
lab2/simics/simics-training-7.0.0-pre.11/linux64/lib/: i_processor_id_router.xml  i_synchronizer_e2l.xml  led_system_controller_bb.xml  m_compute_threaded_dummy.xml  m_display.xml  p_display.xml  p_toggle.xml  rgb_led_i2c.xml
lab2/simics/simics-training-7.0.0-pre.11/scripts/: prepare_lab_files.py
lab2/simics/simics-training-7.0.0-pre.11/src/components/internals-training-comp/: Makefile
lab2/simics/simics-training-7.0.0-pre.11/src/components/led-system-panel-comp/test/: s-led-system-panel.py
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-internals-training/: 03-modules.target.yml  05-time-quanta-multi.target.yml.include  06-interfaces.py
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-internals-training/images/: helloworld.rv.baremetal.elf  probes_demo.rv.baremetal.elf  time-quantum-visual.rv.baremetal.elf
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-internals-training/ribit-unit/: hardware.yml
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-user-training/: 007-multimachine-network.target.yml  900-copy-debug-files-to-project.simics
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-user-training/target-code/: pciop
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-user-training/target-source/demo-one/: big-chars.c  demo-one
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-user-training/target-source/pciop/: readme.md
lab2/simics/simics-training-7.0.0-pre.11/targets/simics-user-training/target-source/training-two/: hardware-interface.c
lab3/simics/simics-7.38.0/src/components/blueprints/: CMakeLists.txt  Makefile
lab3/simics/simics-7.38.0/src/components/blueprints/test/: CMakeLists.txt  docs.py  s-alias.py  s-simtypes.py
lab3/simics/simics-7.38.0/src/extensions/ftp-service/: CMakeLists.txt
lab3/simics/simics-7.38.0/vmxmon/: CMakeLists.txt  cmakelists-linux.cmake
lab3/simics/simics-7.38.0/vmxmon/module/common/: asm-offsets.c  cpudefs.h  dbg.h  dev-ioctl.h  ept.c  ept.h  nested-ept.c  pctr.c  tphys.c
lab3/simics/simics-7.38.0/vmxmon/module/include/: version.h  vmp-exit-codes.h
lab3/simics/simics-7.38.0/vmxmon/module/linux/: api.h  module.c  user-copy.h
lab3/simics/simics-7.38.0/vmxmon/scripts/: check-build  unload-modules
lab3/simics/simics-7.38.0/vmxmon/util/: simcall.c
lab3/simics/simics-crypto-engine-7.13.0/src/extensions/crypto-engine/: CMakeLists.txt  kdf-interface.h  openssl.cmake  pka-interface.dml
lab3/simics/simics-training-7.0.0-pre.11/targets/simics-internals-training/target-source/risc-v/: CMakeLists.txt
lab4/simics/simics-7.38.0/linux64/: api-help.json  pyproject.toml
lab4/simics/simics-7.38.0/linux64/doc/: api-help-description.bz2
lab4/simics/simics-7.38.0/linux64/doc/html/analyzer-user-guide/: debugger-api.html  event-system.html  feature-list-stall-cache.html  linux-tracker.html  using-simple-cache.html
lab4/simics/simics-7.38.0/linux64/doc/html/cmake/: README.html
lab4/simics/simics-7.38.0/linux64/doc/html/creating-packages/: index.html
lab4/simics/simics-7.38.0/linux64/doc/html/dml-1.2-reference-manual/: language.html  (+1 more)
lab4/simics/simics-7.38.0/linux64/include/: api-versions.mk
lab4/simics/simics-7.38.0/linux64/lib/: AT24Cxx.xml  Simics-Base-linux64.modcache  arinc429_bus.xml  firewire_bus.xml  generic_pcie_switch_port.xml  i2c_to_i3c_adapter.xml  i3c_bus.xml  i82583V_v2.xml  interrupt_to_signal.xml  mac_splitter.xml  onfi_flash.xml  pcie_downstream_port.xml  pcie_downstream_port_legacy.xml  sample_802_15_4_transceiver.xml  sample_generic_message_device.xml  sample_i3c_target.xml  sample_interrupt_device.xml  sample_notifier_dml.xml  sample_pci_device.xml  sample_timer_device.xml  signal_to_interrupt.xml  simics_uefi.xml  simple_pcie_device.xml  sja1000_can.xml  transaction_splitter.xml  usb_hs_keyboard.xml  usb_keyboard.xml  virtio_mmio_entropy.xml
lab4/simics/simics-7.38.0/linux64/lib/python-py3/: DML.py  log_commands.py  stest.py  terminal_frontend.py  update_checkpoint_impl.py
lab4/simics/simics-7.38.0/linux64/simicsutils/: __init__.py  packageinfo.py
lab4/simics/simics-7.38.0/linux64/sys/lib/: libfuse3.so.3.13.0  libhs.so.5  libstdc++.so.6.0.33  libxml2.so.2.12.10  libz.so.1.3
lab4/simics/simics-7.38.0/src/extensions/console-common/: CMakeLists.txt  console-frontend.h
lab4/simics/simics-7.38.0/src/extensions/external-connection/: CMakeLists.txt  Makefile
lab4/simics/simics-7.38.0/src/extensions/g-cache/: CMakeLists.txt  gc-random-repl.c  gc.h  sorter.c
lab4/simics/simics-7.38.0/src/extensions/network-common/: CMakeLists.txt  net-utils.c
(+7943 files in other folders)
