[project]
name = "Simics-Base"
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "distro~=1.9.0",
    "ipyxact~=0.3.2",
    "ply==3.4",
    "psutil~=6.0.0",
    "pywin32==304 ; python_full_version < '3.11' and sys_platform == 'win32'",
    "pywin32==306 ; python_full_version >= '3.11' and python_full_version < '3.13' and sys_platform == 'win32'",
    "pywin32==307 ; python_full_version >= '3.13' and sys_platform == 'win32'",
    "pyyaml~=6.0.1",
    "six~=1.16.0",
    "typing-extensions~=4.12.2",
    "setuptools~=76.0.0",
]

[project.optional-dependencies]
gui = ["wxPython==4.2.1"]

[dependency-groups]
dev = [
    "mccabe~=0.7.0",
    "flake8~=7.1.0",
    "pycodestyle~=2.12.0",
    "pyflakes~=3.2.0",
]

# This pyproject.toml needs to be in a very specific place in the host
# directory. You also need to use Simics in editable form. Simics relies
# heavily on relative paths to these well-known places to find things it
# needs.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simics", "simicsutils"]
py-modules = ["runsimics"]

[tool.setuptools.dynamic]
version = {file = "simversion.txt"}
